# Cyber-Guard-Nexus

./: .env.example  .env.template  .eslintrc.cjs  .gitignore  ACCESS.md  ARCHITECTURE.md  BEZPIECZENSTWO.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.frontend  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  INSTALACJA.md  INSTALLATION.md  INSTALL_ANDROID.md  LICENSE  PRODUCTION_READY.md  QUICK_START.md  README.md  SECURITY_AUDIT.md  SUMMARY.md  build.cjs  demo_libraries.py  deploy.sh  docker-compose.yml  drizzle.config.ts  example_usage.py  index.html  index.js  index.tsx  install_libraries.sh  metadata.json  netlify.toml  new-project.sh  nginx.conf  package-lock.json  package.json  replit.md  requirements.txt  tailwind.config.js  (+3 more)
.devcontainer/: devcontainer.json
CANON/: INDEX.md  MIGRATION_LOG.md  README.md
attached_assets/: Untitled_(1)_1771397539442.yaml
backend/: Dockerfile  auth.py  config.py  database.py  main.py  models.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  schemas.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: monitoring.py  security.py  threats.py  vulnerabilities.py
backend/app/core/: config.py  logging.py
backend/prisma/: schema.prisma
backend/services/: ai_service.py  email_service.py  file_service.py
backend/src/: app.ts  server.ts
backend/src/auth/: auth.routes.ts
backend/src/cases/: cases.routes.ts
backend/src/documents/: documents.routes.ts
backend/src/middlewares/: auth.middleware.ts
backend/tests/: conftest.py  test_api.py  test_security.py
frontend/: index.html  package-lock.json  package.json
public/: .env.example  .replit  README.md  README_ULEPSZENIA.md  app.js  hacking-simulator-README.md  hacking-simulator.html  index.html  index.tsx  package.json  script.js  styles.css
server/: db.ts  email.ts  index.ts  routes.ts  storage.ts
shared/: schema.ts
src/: App.tsx  app.component.ts  index.css  main.ts  main.tsx  (+3 more)
(+162 files in other folders)
