[project]
name = "cyber-guard-nexus-backend"
version = "1.0.0"
description = "Advanced Cybersecurity Platform Backend"
authors = [{name = "DominikSolorz"}]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.27",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "httpx>=0.27.0",
    "celery>=5.3.6",
    "python-dotenv>=1.0.1",
    "aiocache>=0.12.2",
    "websockets>=12.0",
    "python-socketio>=5.11.1",
    "numpy>=1.26.4",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.1",
    "tensorflow>=2.16.0",
    "torch>=2.2.0",
    "scapy>=2.5.0",
    "cryptography>=42.0.2",
    "pynacl>=1.5.0",
    "bcrypt>=4.1.2",
    "aioredis>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
    "pytest-cov>=4.1.0",
    "black>=24.2.0",
    "ruff>=0.2.1",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=backend --cov-report=html --cov-report=term"
